// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QueryForm /> should render 1`] = `
.c0 {
  margin: 50px 0px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
}

.c0 p {
  max-width: 800px;
  text-indent: 50px;
  margin: 0px 20px;
}

.c0 input,
.c0 textarea {
  font-family: Verdana;
  font-size: 0.8em;
}

<div>
  <div
    class="c0"
  >
    <p>
      Изпрати запитване, като попълниш формата по-долу, след което ще получиш обаждане за детайли. Или директно се обади на телефон 0890932001.
    </p>
    <fieldset>
      <label>
        Име
      </label>
      <input
        alt="name-field"
        type="text"
        value=""
      />
    </fieldset>
    <fieldset>
      <label>
        Вашият имейл
      </label>
      <input
        alt="email-field"
        type="text"
        value=""
      />
    </fieldset>
    <fieldset>
      <label>
        Телефон за контакт
      </label>
      <input
        alt="phone-field"
        type="text"
        value=""
      />
    </fieldset>
    <fieldset>
      <label>
        Съобщение
      </label>
      <textarea
        alt="message-field"
      />
    </fieldset>
    <button
      class="button-default"
      disabled=""
    >
      Изпрати
    </button>
  </div>
</div>
`;

exports[`<QueryForm /> should render as slim 1`] = `
.c0 input,
.c0 textarea {
  font-family: Verdana;
  font-size: 0.8em;
}

<div>
  <div
    class="c0"
  >
    <fieldset>
      <label>
        Име
      </label>
      <input
        alt="name-field"
        type="text"
        value=""
      />
    </fieldset>
    <fieldset>
      <label>
        Вашият имейл
      </label>
      <input
        alt="email-field"
        type="text"
        value=""
      />
    </fieldset>
    <fieldset>
      <label>
        Телефон за контакт
      </label>
      <input
        alt="phone-field"
        type="text"
        value=""
      />
    </fieldset>
    <fieldset>
      <label>
        Съобщение
      </label>
      <textarea
        alt="message-field"
      />
    </fieldset>
    <button
      class="button-default"
      disabled=""
    >
      Изпрати
    </button>
  </div>
</div>
`;
